--- a/htmlReport/com.banking.controller/AccountController.java.html
+++ b/htmlReport/com.banking.controller/AccountController.java.html
@@ -20,39 +20,39 @@ public class AccountController {
 
     @PostMapping(&quot;/create-account&quot;)
     public ResponseEntity&lt;AccountDTO&gt; createAccount(@Valid @RequestBody AccountDTO accountDTO) {
-<span class="nc" id="L23">        AccountDTO createdAccount = accountService.createAccount(accountDTO);</span>
-<span class="nc" id="L24">        return new ResponseEntity&lt;&gt;(createdAccount, HttpStatus.CREATED);</span>
+<span class="fc" id="L23">        AccountDTO createdAccount = accountService.createAccount(accountDTO);</span>
+<span class="fc" id="L24">        return new ResponseEntity&lt;&gt;(createdAccount, HttpStatus.CREATED);</span>
     }
 
     @GetMapping(&quot;/{id}&quot;)
     public ResponseEntity&lt;AccountDTO&gt; getAccountById(@PathVariable Long id) {
-<span class="nc" id="L29">        AccountDTO accountDTO = accountService.getAccountById(id);</span>
-<span class="nc" id="L30">        return new ResponseEntity&lt;&gt;(accountDTO, HttpStatus.OK);</span>
+<span class="fc" id="L29">        AccountDTO accountDTO = accountService.getAccountById(id);</span>
+<span class="fc" id="L30">        return new ResponseEntity&lt;&gt;(accountDTO, HttpStatus.OK);</span>
     }
 
     @GetMapping(&quot;/customer/{customerId}&quot;)
     public ResponseEntity&lt;List&lt;AccountDTO&gt;&gt; getAccountsByCustomerId(@PathVariable Long customerId) {
-<span class="nc" id="L35">        List&lt;AccountDTO&gt; accounts = accountService.getAccountsByCustomerId(customerId);</span>
-<span class="nc" id="L36">        return new ResponseEntity&lt;&gt;(accounts, HttpStatus.OK);</span>
+<span class="fc" id="L35">        List&lt;AccountDTO&gt; accounts = accountService.getAccountsByCustomerId(customerId);</span>
+<span class="fc" id="L36">        return new ResponseEntity&lt;&gt;(accounts, HttpStatus.OK);</span>
     }
 
     @GetMapping
     public ResponseEntity&lt;List&lt;AccountDTO&gt;&gt; getAllAccounts() {
-<span class="nc" id="L41">        List&lt;AccountDTO&gt; accounts = accountService.getAllAccounts();</span>
-<span class="nc" id="L42">        return new ResponseEntity&lt;&gt;(accounts, HttpStatus.OK);</span>
+<span class="fc" id="L41">        List&lt;AccountDTO&gt; accounts = accountService.getAllAccounts();</span>
+<span class="fc" id="L42">        return new ResponseEntity&lt;&gt;(accounts, HttpStatus.OK);</span>
     }
 
     @PutMapping(&quot;/{id}&quot;)
     public ResponseEntity&lt;AccountDTO&gt; updateAccount(@PathVariable Long id,
                                                     @Valid @RequestBody AccountDTO accountDTO) {
-<span class="nc" id="L48">        AccountDTO updatedAccount = accountService.updateAccount(id, accountDTO);</span>
-<span class="nc" id="L49">        return new ResponseEntity&lt;&gt;(updatedAccount, HttpStatus.OK);</span>
+<span class="fc" id="L48">        AccountDTO updatedAccount = accountService.updateAccount(id, accountDTO);</span>
+<span class="fc" id="L49">        return new ResponseEntity&lt;&gt;(updatedAccount, HttpStatus.OK);</span>
     }
 
     @DeleteMapping(&quot;/{id}&quot;)
     public ResponseEntity&lt;String&gt; deleteAccount(@PathVariable Long id) {
-<span class="nc" id="L54">        accountService.deleteAccount(id);</span>
-<span class="nc" id="L55">        return new ResponseEntity&lt;&gt;(&quot;Deleted Successfully&quot;, HttpStatus.OK);</span>
+<span class="fc" id="L54">        accountService.deleteAccount(id);</span>
+<span class="fc" id="L55">        return new ResponseEntity&lt;&gt;(&quot;Deleted Successfully&quot;, HttpStatus.OK);</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.12.202403310830</span></div></body></html>
