--- a/htmlReport/com.banking.service.impl/CreditCardServiceImpl.java.html
+++ b/htmlReport/com.banking.service.impl/CreditCardServiceImpl.java.html
@@ -32,28 +32,28 @@ public class CreditCardServiceImpl implements CreditCardService {
     @Override
     @Transactional
     public CreditCardDTO createCreditCard(CreditCardDTO creditCardDTO) {
-<span class="nc" id="L35">        log.info(&quot;Creating credit card with number: {}&quot;, creditCardDTO.getCardNumber());</span>
-<span class="nc" id="L36">        Account account = accountRepository.findById(creditCardDTO.getAccountId())</span>
-<span class="nc" id="L37">                .orElseThrow(() -&gt; {</span>
-<span class="nc" id="L38">                    log.error(&quot;Account not found with ID: {}&quot;, creditCardDTO.getAccountId());</span>
-<span class="nc" id="L39">                    return new ResourceNotFoundException(&quot;Account not found with id: &quot; + creditCardDTO.getAccountId());</span>
+<span class="fc" id="L35">        log.info(&quot;Creating credit card with number: {}&quot;, creditCardDTO.getCardNumber());</span>
+<span class="fc" id="L36">        Account account = accountRepository.findById(creditCardDTO.getAccountId())</span>
+<span class="fc" id="L37">                .orElseThrow(() -&gt; {</span>
+<span class="fc" id="L38">                    log.error(&quot;Account not found with ID: {}&quot;, creditCardDTO.getAccountId());</span>
+<span class="fc" id="L39">                    return new ResourceNotFoundException(&quot;Account not found with id: &quot; + creditCardDTO.getAccountId());</span>
                 });
 
-<span class="nc bnc" id="L42" title="All 2 branches missed.">        if (creditCardRepository.existsByCardNumber(creditCardDTO.getCardNumber())) {</span>
-<span class="nc" id="L43">            log.warn(&quot;Card number already exists: {}&quot;, creditCardDTO.getCardNumber());</span>
-<span class="nc" id="L44">            throw new IllegalArgumentException(&quot;Card number already exists&quot;);</span>
+<span class="fc bfc" id="L42" title="All 2 branches covered.">        if (creditCardRepository.existsByCardNumber(creditCardDTO.getCardNumber())) {</span>
+<span class="fc" id="L43">            log.warn(&quot;Card number already exists: {}&quot;, creditCardDTO.getCardNumber());</span>
+<span class="fc" id="L44">            throw new IllegalArgumentException(&quot;Card number already exists&quot;);</span>
         }
 
-<span class="nc bnc" id="L47" title="All 2 branches missed.">        if (creditCardRepository.existsByAccountId(creditCardDTO.getAccountId())) {</span>
-<span class="nc" id="L48">            log.warn(&quot;Account already has a credit card with ID: {}&quot;, creditCardDTO.getAccountId());</span>
-<span class="nc" id="L49">            throw new IllegalArgumentException(&quot;Account already has a credit card&quot;);</span>
+<span class="fc bfc" id="L47" title="All 2 branches covered.">        if (creditCardRepository.existsByAccountId(creditCardDTO.getAccountId())) {</span>
+<span class="fc" id="L48">            log.warn(&quot;Account already has a credit card with ID: {}&quot;, creditCardDTO.getAccountId());</span>
+<span class="fc" id="L49">            throw new IllegalArgumentException(&quot;Account already has a credit card&quot;);</span>
         }
 
-<span class="nc" id="L52">        CreditCard creditCard = mapToEntity(creditCardDTO);</span>
-<span class="nc" id="L53">        creditCard.setAccount(account);</span>
-<span class="nc" id="L54">        CreditCard savedCard = creditCardRepository.save(creditCard);</span>
-<span class="nc" id="L55">        log.info(&quot;Credit card created successfully with ID: {}&quot;, savedCard.getId());</span>
-<span class="nc" id="L56">        return mapToDTO(savedCard);</span>
+<span class="fc" id="L52">        CreditCard creditCard = mapToEntity(creditCardDTO);</span>
+<span class="fc" id="L53">        creditCard.setAccount(account);</span>
+<span class="fc" id="L54">        CreditCard savedCard = creditCardRepository.save(creditCard);</span>
+<span class="fc" id="L55">        log.info(&quot;Credit card created successfully with ID: {}&quot;, savedCard.getId());</span>
+<span class="fc" id="L56">        return mapToDTO(savedCard);</span>
     }
 
     @Override
@@ -70,82 +70,82 @@ public class CreditCardServiceImpl implements CreditCardService {
 
     @Override
     public CreditCardDTO getCreditCardByCardNumber(String cardNumber) {
-<span class="nc" id="L73">        log.info(&quot;Fetching credit card by card number: {}&quot;, cardNumber);</span>
-<span class="nc" id="L74">        CreditCard creditCard = creditCardRepository.findByCardNumber(cardNumber)</span>
-<span class="nc" id="L75">                .orElseThrow(() -&gt; {</span>
+<span class="fc" id="L73">        log.info(&quot;Fetching credit card by card number: {}&quot;, cardNumber);</span>
+<span class="fc" id="L74">        CreditCard creditCard = creditCardRepository.findByCardNumber(cardNumber)</span>
+<span class="fc" id="L75">                .orElseThrow(() -&gt; {</span>
 <span class="nc" id="L76">                    log.error(&quot;Credit card not found with number: {}&quot;, cardNumber);</span>
 <span class="nc" id="L77">                    return new ResourceNotFoundException(&quot;Credit card not found with number: &quot; + cardNumber);</span>
                 });
-<span class="nc" id="L79">        log.info(&quot;Credit card fetched successfully with number: {}&quot;, cardNumber);</span>
-<span class="nc" id="L80">        return mapToDTO(creditCard);</span>
+<span class="fc" id="L79">        log.info(&quot;Credit card fetched successfully with number: {}&quot;, cardNumber);</span>
+<span class="fc" id="L80">        return mapToDTO(creditCard);</span>
     }
 
     @Override
     public CreditCardDTO getCreditCardByAccountId(Long accountId) {
-<span class="nc" id="L85">        log.info(&quot;Fetching credit card by account ID: {}&quot;, accountId);</span>
-<span class="nc" id="L86">        CreditCard creditCard = creditCardRepository.findByAccountId(accountId)</span>
-<span class="nc" id="L87">                .orElseThrow(() -&gt; {</span>
-<span class="nc" id="L88">                    log.error(&quot;Credit card not found for account ID: {}&quot;, accountId);</span>
-<span class="nc" id="L89">                    return new ResourceNotFoundException(&quot;Credit card not found for account ID: &quot; + accountId);</span>
+<span class="fc" id="L85">        log.info(&quot;Fetching credit card by account ID: {}&quot;, accountId);</span>
+<span class="fc" id="L86">        CreditCard creditCard = creditCardRepository.findByAccountId(accountId)</span>
+<span class="fc" id="L87">                .orElseThrow(() -&gt; {</span>
+<span class="fc" id="L88">                    log.error(&quot;Credit card not found for account ID: {}&quot;, accountId);</span>
+<span class="fc" id="L89">                    return new ResourceNotFoundException(&quot;Credit card not found for account ID: &quot; + accountId);</span>
                 });
-<span class="nc" id="L91">        log.info(&quot;Credit card fetched successfully for account ID: {}&quot;, accountId);</span>
-<span class="nc" id="L92">        return mapToDTO(creditCard);</span>
+<span class="fc" id="L91">        log.info(&quot;Credit card fetched successfully for account ID: {}&quot;, accountId);</span>
+<span class="fc" id="L92">        return mapToDTO(creditCard);</span>
     }
 
     @Override
     public List&lt;CreditCardDTO&gt; getAllCreditCards() {
-<span class="nc" id="L97">        log.info(&quot;Fetching all credit cards&quot;);</span>
-<span class="nc" id="L98">        List&lt;CreditCard&gt; creditCards = creditCardRepository.findAll();</span>
-<span class="nc" id="L99">        log.info(&quot;Total credit cards fetched: {}&quot;, creditCards.size());</span>
-<span class="nc" id="L100">        return creditCards.stream().map(this::mapToDTO).collect(Collectors.toList());</span>
+<span class="fc" id="L97">        log.info(&quot;Fetching all credit cards&quot;);</span>
+<span class="fc" id="L98">        List&lt;CreditCard&gt; creditCards = creditCardRepository.findAll();</span>
+<span class="fc" id="L99">        log.info(&quot;Total credit cards fetched: {}&quot;, creditCards.size());</span>
+<span class="fc" id="L100">        return creditCards.stream().map(this::mapToDTO).collect(Collectors.toList());</span>
     }
 
     @Override
     @Transactional
     public CreditCardDTO updateCreditCard(Long id, CreditCardDTO creditCardDTO) {
-<span class="nc" id="L106">        log.info(&quot;Updating credit card with ID: {}&quot;, id);</span>
-<span class="nc" id="L107">        CreditCard creditCard = creditCardRepository.findById(id)</span>
-<span class="nc" id="L108">                .orElseThrow(() -&gt; {</span>
+<span class="fc" id="L106">        log.info(&quot;Updating credit card with ID: {}&quot;, id);</span>
+<span class="fc" id="L107">        CreditCard creditCard = creditCardRepository.findById(id)</span>
+<span class="fc" id="L108">                .orElseThrow(() -&gt; {</span>
 <span class="nc" id="L109">                    log.error(&quot;Credit card not found with ID: {}&quot;, id);</span>
 <span class="nc" id="L110">                    return new ResourceNotFoundException(&quot;Credit card not found with id: &quot; + id);</span>
                 });
 
-<span class="nc bnc" id="L113" title="All 2 branches missed.">        if (!creditCard.getCardNumber().equals(creditCardDTO.getCardNumber()) &amp;&amp;</span>
+<span class="pc bpc" id="L113" title="1 of 2 branches missed.">        if (!creditCard.getCardNumber().equals(creditCardDTO.getCardNumber()) &amp;&amp;</span>
 <span class="nc bnc" id="L114" title="All 2 branches missed.">                creditCardRepository.existsByCardNumber(creditCardDTO.getCardNumber())) {</span>
 <span class="nc" id="L115">            log.warn(&quot;Card number already exists: {}&quot;, creditCardDTO.getCardNumber());</span>
 <span class="nc" id="L116">            throw new IllegalArgumentException(&quot;Card number already exists&quot;);</span>
         }
 
-<span class="nc" id="L119">        creditCard.setCardNumber(creditCardDTO.getCardNumber());</span>
-<span class="nc" id="L120">        creditCard.setExpiryDate(creditCardDTO.getExpiryDate());</span>
-<span class="nc" id="L121">        creditCard.setCvv(creditCardDTO.getCvv());</span>
-<span class="nc" id="L122">        creditCard.setActive(creditCardDTO.isActive());</span>
-<span class="nc" id="L123">        creditCard.setCreditLimit(creditCardDTO.getCreditLimit());</span>
-<span class="nc" id="L124">        creditCard.setAvailableCredit(creditCardDTO.getAvailableCredit());</span>
+<span class="fc" id="L119">        creditCard.setCardNumber(creditCardDTO.getCardNumber());</span>
+<span class="fc" id="L120">        creditCard.setExpiryDate(creditCardDTO.getExpiryDate());</span>
+<span class="fc" id="L121">        creditCard.setCvv(creditCardDTO.getCvv());</span>
+<span class="fc" id="L122">        creditCard.setActive(creditCardDTO.isActive());</span>
+<span class="fc" id="L123">        creditCard.setCreditLimit(creditCardDTO.getCreditLimit());</span>
+<span class="fc" id="L124">        creditCard.setAvailableCredit(creditCardDTO.getAvailableCredit());</span>
 
-<span class="nc" id="L126">        CreditCard updatedCard = creditCardRepository.save(creditCard);</span>
-<span class="nc" id="L127">        log.info(&quot;Credit card updated successfully with ID: {}&quot;, id);</span>
-<span class="nc" id="L128">        return mapToDTO(updatedCard);</span>
+<span class="fc" id="L126">        CreditCard updatedCard = creditCardRepository.save(creditCard);</span>
+<span class="fc" id="L127">        log.info(&quot;Credit card updated successfully with ID: {}&quot;, id);</span>
+<span class="fc" id="L128">        return mapToDTO(updatedCard);</span>
     }
 
     @Override
     @Transactional
     public void deleteCreditCard(Long id) {
-<span class="nc" id="L134">        log.info(&quot;Deleting credit card with ID: {}&quot;, id);</span>
-<span class="nc bnc" id="L135" title="All 2 branches missed.">        if (!creditCardRepository.existsById(id)) {</span>
-<span class="nc" id="L136">            log.error(&quot;Credit card not found with ID: {}&quot;, id);</span>
-<span class="nc" id="L137">            throw new ResourceNotFoundException(&quot;Credit card not found with id: &quot; + id);</span>
+<span class="fc" id="L134">        log.info(&quot;Deleting credit card with ID: {}&quot;, id);</span>
+<span class="fc bfc" id="L135" title="All 2 branches covered.">        if (!creditCardRepository.existsById(id)) {</span>
+<span class="fc" id="L136">            log.error(&quot;Credit card not found with ID: {}&quot;, id);</span>
+<span class="fc" id="L137">            throw new ResourceNotFoundException(&quot;Credit card not found with id: &quot; + id);</span>
         }
-<span class="nc" id="L139">        creditCardRepository.deleteById(id);</span>
-<span class="nc" id="L140">        log.info(&quot;Credit card deleted successfully with ID: {}&quot;, id);</span>
-<span class="nc" id="L141">    }</span>
+<span class="fc" id="L139">        creditCardRepository.deleteById(id);</span>
+<span class="fc" id="L140">        log.info(&quot;Credit card deleted successfully with ID: {}&quot;, id);</span>
+<span class="fc" id="L141">    }</span>
 
     private CreditCardDTO mapToDTO (CreditCard creditCard){
-<span class="nc" id="L144">        return modelMapper.map(creditCard,CreditCardDTO.class);</span>
+<span class="fc" id="L144">        return modelMapper.map(creditCard,CreditCardDTO.class);</span>
     }
 
     private CreditCard mapToEntity (CreditCardDTO dto){
-<span class="nc" id="L148">        return modelMapper.map(dto,CreditCard.class);</span>
+<span class="fc" id="L148">        return modelMapper.map(dto,CreditCard.class);</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.12.202403310830</span></div></body></html>
