--- a/htmlReport/com.banking.controller/CreditCardController.java.html
+++ b/htmlReport/com.banking.controller/CreditCardController.java.html
@@ -18,10 +18,10 @@ public class CreditCardController {
 <span class="fc" id="L18">        this.creditCardService = creditCardService;</span>
 <span class="fc" id="L19">    }</span>
 
-    @PostMapping
+    @PostMapping(&quot;/add-credit-card&quot;)
     public ResponseEntity&lt;CreditCardDTO&gt; createCreditCard(@Valid @RequestBody CreditCardDTO creditCardDTO) {
-<span class="nc" id="L23">        CreditCardDTO createdCard = creditCardService.createCreditCard(creditCardDTO);</span>
-<span class="nc" id="L24">        return new ResponseEntity&lt;&gt;(createdCard, HttpStatus.CREATED);</span>
+<span class="fc" id="L23">        CreditCardDTO createdCard = creditCardService.createCreditCard(creditCardDTO);</span>
+<span class="fc" id="L24">        return new ResponseEntity&lt;&gt;(createdCard, HttpStatus.CREATED);</span>
     }
 
     @GetMapping(&quot;/{id}&quot;)
@@ -32,33 +32,33 @@ public class CreditCardController {
 
     @GetMapping(&quot;/number/{cardNumber}&quot;)
     public ResponseEntity&lt;CreditCardDTO&gt; getCreditCardByCardNumber(@PathVariable String cardNumber) {
-<span class="nc" id="L35">        CreditCardDTO creditCardDTO = creditCardService.getCreditCardByCardNumber(cardNumber);</span>
-<span class="nc" id="L36">        return new ResponseEntity&lt;&gt;(creditCardDTO, HttpStatus.OK);</span>
+<span class="fc" id="L35">        CreditCardDTO creditCardDTO = creditCardService.getCreditCardByCardNumber(cardNumber);</span>
+<span class="fc" id="L36">        return new ResponseEntity&lt;&gt;(creditCardDTO, HttpStatus.OK);</span>
     }
 
     @GetMapping(&quot;/account/{accountId}&quot;)
     public ResponseEntity&lt;CreditCardDTO&gt; getCreditCardByAccountId(@PathVariable Long accountId) {
-<span class="nc" id="L41">        CreditCardDTO creditCardDTO = creditCardService.getCreditCardByAccountId(accountId);</span>
-<span class="nc" id="L42">        return new ResponseEntity&lt;&gt;(creditCardDTO, HttpStatus.OK);</span>
+<span class="fc" id="L41">        CreditCardDTO creditCardDTO = creditCardService.getCreditCardByAccountId(accountId);</span>
+<span class="fc" id="L42">        return new ResponseEntity&lt;&gt;(creditCardDTO, HttpStatus.OK);</span>
     }
 
     @GetMapping
     public ResponseEntity&lt;List&lt;CreditCardDTO&gt;&gt; getAllCreditCards() {
-<span class="nc" id="L47">        List&lt;CreditCardDTO&gt; creditCards = creditCardService.getAllCreditCards();</span>
-<span class="nc" id="L48">        return new ResponseEntity&lt;&gt;(creditCards, HttpStatus.OK);</span>
+<span class="fc" id="L47">        List&lt;CreditCardDTO&gt; creditCards = creditCardService.getAllCreditCards();</span>
+<span class="fc" id="L48">        return new ResponseEntity&lt;&gt;(creditCards, HttpStatus.OK);</span>
     }
 
     @PutMapping(&quot;/{id}&quot;)
     public ResponseEntity&lt;CreditCardDTO&gt; updateCreditCard(@PathVariable Long id,
                                                           @Valid @RequestBody CreditCardDTO creditCardDTO) {
-<span class="nc" id="L54">        CreditCardDTO updatedCard = creditCardService.updateCreditCard(id, creditCardDTO);</span>
-<span class="nc" id="L55">        return new ResponseEntity&lt;&gt;(updatedCard, HttpStatus.OK);</span>
+<span class="fc" id="L54">        CreditCardDTO updatedCard = creditCardService.updateCreditCard(id, creditCardDTO);</span>
+<span class="fc" id="L55">        return new ResponseEntity&lt;&gt;(updatedCard, HttpStatus.OK);</span>
     }
 
     @DeleteMapping(&quot;/{id}&quot;)
     public ResponseEntity&lt;String&gt; deleteCreditCard(@PathVariable Long id) {
-<span class="nc" id="L60">        creditCardService.deleteCreditCard(id);</span>
-<span class="nc" id="L61">        return new ResponseEntity&lt;&gt;(&quot;Deleted Successfully&quot;, HttpStatus.OK);</span>
+<span class="fc" id="L60">        creditCardService.deleteCreditCard(id);</span>
+<span class="fc" id="L61">        return new ResponseEntity&lt;&gt;(&quot;Deleted Successfully&quot;, HttpStatus.OK);</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.12.202403310830</span></div></body></html>
