--- a/htmlReport/com.banking.exception/GlobalExceptionHandler.java.html
+++ b/htmlReport/com.banking.exception/GlobalExceptionHandler.java.html
@@ -19,14 +19,14 @@ import java.util.Map;
 
     @ExceptionHandler(ResourceNotFoundException.class)
     public ResponseEntity&lt;ErrorResponse&gt; handleResourceNotFoundException(ResourceNotFoundException ex, WebRequest request) {
-<span class="nc" id="L22">        ErrorResponse errorResponse = new ErrorResponse(</span>
-<span class="nc" id="L23">                LocalDateTime.now(),</span>
-<span class="nc" id="L24">                HttpStatus.NOT_FOUND.value(),</span>
-<span class="nc" id="L25">                HttpStatus.NOT_FOUND.getReasonPhrase(),</span>
-<span class="nc" id="L26">                ex.getMessage(),</span>
-<span class="nc" id="L27">                request.getDescription(false)</span>
+<span class="fc" id="L22">        ErrorResponse errorResponse = new ErrorResponse(</span>
+<span class="fc" id="L23">                LocalDateTime.now(),</span>
+<span class="fc" id="L24">                HttpStatus.NOT_FOUND.value(),</span>
+<span class="fc" id="L25">                HttpStatus.NOT_FOUND.getReasonPhrase(),</span>
+<span class="fc" id="L26">                ex.getMessage(),</span>
+<span class="fc" id="L27">                request.getDescription(false)</span>
         );
-<span class="nc" id="L29">        return new ResponseEntity&lt;&gt;(errorResponse, HttpStatus.NOT_FOUND);</span>
+<span class="fc" id="L29">        return new ResponseEntity&lt;&gt;(errorResponse, HttpStatus.NOT_FOUND);</span>
     }
 
     @ExceptionHandler(DuplicateResourceException.class)
@@ -75,14 +75,14 @@ import java.util.Map;
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity&lt;ErrorResponse&gt; handleGlobalException(Exception ex, WebRequest request) {
-<span class="nc" id="L78">        ErrorResponse errorResponse = new ErrorResponse(</span>
-<span class="nc" id="L79">                LocalDateTime.now(),</span>
-<span class="nc" id="L80">                HttpStatus.INTERNAL_SERVER_ERROR.value(),</span>
-<span class="nc" id="L81">                HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(),</span>
-<span class="nc" id="L82">                ex.getMessage(),</span>
-<span class="nc" id="L83">                request.getDescription(false)</span>
+<span class="fc" id="L78">        ErrorResponse errorResponse = new ErrorResponse(</span>
+<span class="fc" id="L79">                LocalDateTime.now(),</span>
+<span class="fc" id="L80">                HttpStatus.INTERNAL_SERVER_ERROR.value(),</span>
+<span class="fc" id="L81">                HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(),</span>
+<span class="fc" id="L82">                ex.getMessage(),</span>
+<span class="fc" id="L83">                request.getDescription(false)</span>
         );
-<span class="nc" id="L85">        return new ResponseEntity&lt;&gt;(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);</span>
+<span class="fc" id="L85">        return new ResponseEntity&lt;&gt;(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);</span>
     }
     @Data
     @NoArgsConstructor
