--- a/htmlReport/com.banking.service.impl/AccountServiceImpl.java.html
+++ b/htmlReport/com.banking.service.impl/AccountServiceImpl.java.html
@@ -32,53 +32,53 @@ public class AccountServiceImpl implements AccountService {
     @Override
     @Transactional
     public AccountDTO createAccount(AccountDTO accountDTO) {
-<span class="nc" id="L35">        log.info(&quot;Creating account with number: {}&quot;, accountDTO.getAccountNumber());</span>
-<span class="nc" id="L36">        Customer customer = customerRepository.findById(accountDTO.getCustomerId())</span>
-<span class="nc" id="L37">                .orElseThrow(() -&gt; {</span>
-<span class="nc" id="L38">                    log.error(&quot;Customer not found with ID: {}&quot;, accountDTO.getCustomerId());</span>
-<span class="nc" id="L39">                    return new ResourceNotFoundException(&quot;Customer not found with id: &quot; + accountDTO.getCustomerId());</span>
+<span class="fc" id="L35">        log.info(&quot;Creating account with number: {}&quot;, accountDTO.getAccountNumber());</span>
+<span class="fc" id="L36">        Customer customer = customerRepository.findById(accountDTO.getCustomerId())</span>
+<span class="fc" id="L37">                .orElseThrow(() -&gt; {</span>
+<span class="fc" id="L38">                    log.error(&quot;Customer not found with ID: {}&quot;, accountDTO.getCustomerId());</span>
+<span class="fc" id="L39">                    return new ResourceNotFoundException(&quot;Customer not found with id: &quot; + accountDTO.getCustomerId());</span>
                 });
-<span class="nc bnc" id="L41" title="All 2 branches missed.">        if (accountRepository.existsByAccountNumber(accountDTO.getAccountNumber())) {</span>
-<span class="nc" id="L42">            log.warn(&quot;Account number already exists: {}&quot;, accountDTO.getAccountNumber());</span>
-<span class="nc" id="L43">            throw new IllegalArgumentException(&quot;Account number already exists&quot;);</span>
+<span class="fc bfc" id="L41" title="All 2 branches covered.">        if (accountRepository.existsByAccountNumber(accountDTO.getAccountNumber())) {</span>
+<span class="fc" id="L42">            log.warn(&quot;Account number already exists: {}&quot;, accountDTO.getAccountNumber());</span>
+<span class="fc" id="L43">            throw new IllegalArgumentException(&quot;Account number already exists&quot;);</span>
         }
 
-<span class="nc bnc" id="L46" title="All 2 branches missed.">        if (accountRepository.existsByCustomerAndAccountType(customer, accountDTO.getAccountType())) {</span>
+<span class="pc bpc" id="L46" title="1 of 2 branches missed.">        if (accountRepository.existsByCustomerAndAccountType(customer, accountDTO.getAccountType())) {</span>
 <span class="nc" id="L47">            log.warn(&quot;Customer already has an account of type: {}&quot;, accountDTO.getAccountType());</span>
 <span class="nc" id="L48">            throw new IllegalArgumentException(&quot;Customer already has an account of type &quot; + accountDTO.getAccountType());</span>
         }
 
-<span class="nc" id="L51">        Account account = mapToEntity(accountDTO);</span>
-<span class="nc" id="L52">        account.setCustomer(customer);</span>
-<span class="nc" id="L53">        Account savedAccount = accountRepository.save(account);</span>
-<span class="nc" id="L54">        log.info(&quot;Account created successfully with ID: {}&quot;, savedAccount.getId());</span>
-<span class="nc" id="L55">        return mapToDTO(savedAccount);</span>
+<span class="fc" id="L51">        Account account = mapToEntity(accountDTO);</span>
+<span class="fc" id="L52">        account.setCustomer(customer);</span>
+<span class="fc" id="L53">        Account savedAccount = accountRepository.save(account);</span>
+<span class="fc" id="L54">        log.info(&quot;Account created successfully with ID: {}&quot;, savedAccount.getId());</span>
+<span class="fc" id="L55">        return mapToDTO(savedAccount);</span>
     }
 
     @Override
     public AccountDTO getAccountById(Long id) {
-<span class="nc" id="L60">        log.info(&quot;Fetching account by ID: {}&quot;, id);</span>
-<span class="nc" id="L61">        Account account = accountRepository.findById(id)</span>
-<span class="nc" id="L62">                .orElseThrow(() -&gt; {</span>
-<span class="nc" id="L63">                    log.error(&quot;Account not found with ID: {}&quot;, id);</span>
-<span class="nc" id="L64">                    return new ResourceNotFoundException(&quot;Account not found with id: &quot; + id);</span>
+<span class="fc" id="L60">        log.info(&quot;Fetching account by ID: {}&quot;, id);</span>
+<span class="fc" id="L61">        Account account = accountRepository.findById(id)</span>
+<span class="fc" id="L62">                .orElseThrow(() -&gt; {</span>
+<span class="fc" id="L63">                    log.error(&quot;Account not found with ID: {}&quot;, id);</span>
+<span class="fc" id="L64">                    return new ResourceNotFoundException(&quot;Account not found with id: &quot; + id);</span>
                 });
-<span class="nc" id="L66">        log.info(&quot;Account fetched successfully with ID: {}&quot;, id);</span>
-<span class="nc" id="L67">        return mapToDTO(account);</span>
+<span class="fc" id="L66">        log.info(&quot;Account fetched successfully with ID: {}&quot;, id);</span>
+<span class="fc" id="L67">        return mapToDTO(account);</span>
     }
 
     @Override
     public List&lt;AccountDTO&gt; getAccountsByCustomerId(Long customerId) {
-<span class="nc" id="L72">        log.info(&quot;Fetching accounts by customer ID: {}&quot;, customerId);</span>
+<span class="fc" id="L72">        log.info(&quot;Fetching accounts by customer ID: {}&quot;, customerId);</span>
 
-<span class="nc bnc" id="L74" title="All 2 branches missed.">        if (!customerRepository.existsById(customerId)) {</span>
-<span class="nc" id="L75">            log.error(&quot;Customer not found with ID: {}&quot;, customerId);</span>
-<span class="nc" id="L76">            throw new ResourceNotFoundException(&quot;Customer not found with id: &quot; + customerId);</span>
+<span class="fc bfc" id="L74" title="All 2 branches covered.">        if (!customerRepository.existsById(customerId)) {</span>
+<span class="fc" id="L75">            log.error(&quot;Customer not found with ID: {}&quot;, customerId);</span>
+<span class="fc" id="L76">            throw new ResourceNotFoundException(&quot;Customer not found with id: &quot; + customerId);</span>
         }
 
-<span class="nc" id="L79">        List&lt;Account&gt; accounts = accountRepository.findByCustomerId(customerId);</span>
-<span class="nc" id="L80">        log.info(&quot;Total accounts fetched for customer ID {}: {}&quot;, customerId, accounts.size());</span>
-<span class="nc" id="L81">        return accounts.stream().map(this::mapToDTO).collect(Collectors.toList());</span>
+<span class="fc" id="L79">        List&lt;Account&gt; accounts = accountRepository.findByCustomerId(customerId);</span>
+<span class="fc" id="L80">        log.info(&quot;Total accounts fetched for customer ID {}: {}&quot;, customerId, accounts.size());</span>
+<span class="fc" id="L81">        return accounts.stream().map(this::mapToDTO).collect(Collectors.toList());</span>
     }
 
     @Override
@@ -95,53 +95,53 @@ public class AccountServiceImpl implements AccountService {
 
     @Override
     public List&lt;AccountDTO&gt; getAllAccounts() {
-<span class="nc" id="L98">        log.info(&quot;Fetching all accounts&quot;);</span>
-<span class="nc" id="L99">        List&lt;Account&gt; accounts = accountRepository.findAll();</span>
-<span class="nc" id="L100">        log.info(&quot;Total accounts fetched: {}&quot;, accounts.size());</span>
-<span class="nc" id="L101">        return accounts.stream().map(this::mapToDTO).collect(Collectors.toList());</span>
+<span class="fc" id="L98">        log.info(&quot;Fetching all accounts&quot;);</span>
+<span class="fc" id="L99">        List&lt;Account&gt; accounts = accountRepository.findAll();</span>
+<span class="fc" id="L100">        log.info(&quot;Total accounts fetched: {}&quot;, accounts.size());</span>
+<span class="fc" id="L101">        return accounts.stream().map(this::mapToDTO).collect(Collectors.toList());</span>
     }
 
     @Override
     public AccountDTO updateAccount(Long id, AccountDTO accountDTO) {
-<span class="nc" id="L106">        log.info(&quot;Updating account with ID: {}&quot;, id);</span>
-<span class="nc" id="L107">        Account account = accountRepository.findById(id)</span>
-<span class="nc" id="L108">                .orElseThrow(() -&gt; {</span>
-<span class="nc" id="L109">                    log.error(&quot;Account not found with ID: {}&quot;, id);</span>
-<span class="nc" id="L110">                    return new ResourceNotFoundException(&quot;Account not found with id: &quot; + id);</span>
+<span class="fc" id="L106">        log.info(&quot;Updating account with ID: {}&quot;, id);</span>
+<span class="fc" id="L107">        Account account = accountRepository.findById(id)</span>
+<span class="fc" id="L108">                .orElseThrow(() -&gt; {</span>
+<span class="fc" id="L109">                    log.error(&quot;Account not found with ID: {}&quot;, id);</span>
+<span class="fc" id="L110">                    return new ResourceNotFoundException(&quot;Account not found with id: &quot; + id);</span>
                 });
 
-<span class="nc bnc" id="L113" title="All 2 branches missed.">        if (!account.getAccountNumber().equals(accountDTO.getAccountNumber()) &amp;&amp;</span>
-<span class="nc bnc" id="L114" title="All 2 branches missed.">                accountRepository.existsByAccountNumber(accountDTO.getAccountNumber())) {</span>
-<span class="nc" id="L115">            log.warn(&quot;Account number already exists: {}&quot;, accountDTO.getAccountNumber());</span>
-<span class="nc" id="L116">            throw new IllegalArgumentException(&quot;Account number already exists&quot;);</span>
-        }
+<span class="pc bpc" id="L113" title="1 of 2 branches missed.">//        if (!account.getAccountNumber().equals(accountDTO.getAccountNumber()) &amp;&amp;</span>
+<span class="fc bfc" id="L114" title="All 2 branches covered.">//                accountRepository.existsByAccountNumber(accountDTO.getAccountNumber())) {</span>
+<span class="fc" id="L115">//            log.warn(&quot;Account number already exists: {}&quot;, accountDTO.getAccountNumber());</span>
+<span class="fc" id="L116">//            throw new IllegalArgumentException(&quot;Account number already exists&quot;);</span>
+//        }
 
-<span class="nc" id="L119">        account.setAccountType(accountDTO.getAccountType());</span>
-<span class="nc" id="L120">        Account updatedAccount = accountRepository.save(account);</span>
-<span class="nc" id="L121">        log.info(&quot;Account updated successfully with ID: {}&quot;, id);</span>
-<span class="nc" id="L122">        return mapToDTO(updatedAccount);</span>
+<span class="fc" id="L119">        account.setAccountType(accountDTO.getAccountType());</span>
+<span class="fc" id="L120">        Account updatedAccount = accountRepository.save(account);</span>
+<span class="fc" id="L121">        log.info(&quot;Account updated successfully with ID: {}&quot;, id);</span>
+<span class="fc" id="L122">        return mapToDTO(updatedAccount);</span>
     }
 
     @Override
     public void deleteAccount(Long id) {
-<span class="nc" id="L127">        log.info(&quot;Deleting account with ID: {}&quot;, id);</span>
-<span class="nc bnc" id="L128" title="All 2 branches missed.">        if (!accountRepository.existsById(id)) {</span>
-<span class="nc" id="L129">            log.error(&quot;Account not found with ID: {}&quot;, id);</span>
-<span class="nc" id="L130">            throw new ResourceNotFoundException(&quot;Account not found with id: &quot; + id);</span>
+<span class="fc" id="L127">        log.info(&quot;Deleting account with ID: {}&quot;, id);</span>
+<span class="fc bfc" id="L128" title="All 2 branches covered.">        if (!accountRepository.existsById(id)) {</span>
+<span class="fc" id="L129">            log.error(&quot;Account not found with ID: {}&quot;, id);</span>
+<span class="fc" id="L130">            throw new ResourceNotFoundException(&quot;Account not found with id: &quot; + id);</span>
         }
-<span class="nc" id="L132">        accountRepository.deleteById(id);</span>
-<span class="nc" id="L133">        log.info(&quot;Account deleted successfully with ID: {}&quot;, id);</span>
-<span class="nc" id="L134">    }</span>
+<span class="fc" id="L132">        accountRepository.deleteById(id);</span>
+<span class="fc" id="L133">        log.info(&quot;Account deleted successfully with ID: {}&quot;, id);</span>
+<span class="fc" id="L134">    }</span>
 
     public AccountDTO mapToDTO(Account account) {
-<span class="nc" id="L137">        AccountDTO dto = modelMapper.map(account, AccountDTO.class);</span>
-<span class="nc" id="L138">        dto.setCustomerId(account.getCustomer().getId());</span>
-<span class="nc" id="L139">        return dto;</span>
+<span class="fc" id="L137">        AccountDTO dto = modelMapper.map(account, AccountDTO.class);</span>
+<span class="fc" id="L138">        dto.setCustomerId(account.getCustomer().getId());</span>
+<span class="fc" id="L139">        return dto;</span>
     }
 
     public Account mapToEntity(AccountDTO dto) {
-<span class="nc" id="L143">        Account account = modelMapper.map(dto, Account.class);</span>
-<span class="nc" id="L144">        return account;</span>
+<span class="fc" id="L143">        Account account = modelMapper.map(dto, Account.class);</span>
+<span class="fc" id="L144">        return account;</span>
     }
 
 
